# Rescue_Vision

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.txt  README.md  requirements.txt
docs/: architecture.md  installation.md  usage.md
docs/images/: README.md
experiments/: README.md
experiments/configs/: v1.yaml  v2.yaml  v3.yaml  v4.yaml
experiments/results/: auto_classifier_confusion_matrix.csv  coco_results.csv  exdark_results.csv  hyperparam_grid_conf_imgsz.csv  mchs_auto_label_results.csv  mchs_manual_gt_results.csv  mot17_detection_results.csv  mot17_tracking_results.csv  reside_results.csv  smoketest_results.csv  training_iterations_summary.csv
lab_work/: classifier_lab.md
rescue_vision/: __init__.py  package.xml  rescue_vision_node.py  scene_analyzer.py  setup.py
rescue_vision/config/: bytetrack.yaml  default_params.yaml
rescue_vision/launch/: pipeline_realsense.launch.py  pipeline_rosbag.launch.py  pipeline_sim.launch.py
rescue_vision/rescue_vision/: __init__.py  base_detector.py  config.py  enhancement_modes.py  main.py  metrics_logger.py  operator_visualization_node.py  rescue_enhancer.py  rescue_vision_node.py  scene_analyzer.py  vision_pro_v5.py
rescue_vision/resource/: rescue_vision
rescue_vision_msgs/: CMakeLists.txt  package.xml
rescue_vision_msgs/msg/: PersonDetection.msg  SceneMode.msg
scripts/: calibrate_scene_thresholds.py  train_v4.py
tests/: test_basic.py
tools/: evaluate_map_fps.py  gt_labeler_tkinter.py  make_comparison.py  synthesize_smoke.py
