<?xml version="1.0"?>
<package format="3">
  <name>rescue_vision</name>
  <version>0.1.0</version>
  <description>Rescue robot vision pipeline with adaptive enhancement and YOLO11-pose detection.</description>
  <maintainer email="92t89nh84w@privaterelay.appleid.com">Marat Mirgazev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rescue_vision_msgs</depend>
  <exec_depend>python3-opencv</exec_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
