<?xml version="1.0"?>
<package format="3">
  <name>rescue_vision_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages for Rescue Vision perception pipeline.</description>
  <maintainer email="92t89nh84w@privaterelay.appleid.com">Marat Mirgazev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
