<?xml version="1.0"?>
<package format="3">
  <name>rescue_vision_msgs</name>
  <version>1.0.0</version>
  <description>Custom ROS2 messages for the Rescue Vision perception subsystem
    (SceneMode and PersonDetection types). Bachelor thesis, MIREA, 2026.</description>

  <maintainer email="mirgazev.ma@edu.mirea.ru">Marat Mirgazev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
